# xray-vless-vpn

./: build.gradle  build_alternative.sh  build_tun2socks.sh  build_tun2socks_jni.sh  build_xray_core.sh  download_xray.sh  gradle.properties  settings.gradle  test_parse.sh
.circleci/: config.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  tun2socks_jni.c  tun2socks_v2.c
app/src/main/java/com/vpn/xrayvless/: LogManager.kt  MainActivity.kt  Tun2SocksJNI.kt  V2RayNativeManager.kt  V2RayServiceManager.kt  V2RayVpnService.kt  VlessConfig.kt  XrayCoreService.kt  XrayVpnService.kt
app/src/main/res/drawable/: ic_chave_vpn.xml  ic_launcher.xml  status_circle.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/mipmap-hdpi/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
tun2socks_jni/: go.mod  tun2socks.go
